# CoopAndreas

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CoopAndreasNET.sln  LICENSE  README.md  build.bat  svr.lua  xmake.lua
.github/workflows/: ci.yml
CoopAndreasNET/: Connection.cs  CoopAndreasNET.csproj  Logger.cs  Main.cs  Patch.cs  RemotePlayer.cs  packages.config
CoopAndreasNET/Properties/: AssemblyInfo.cs
CoopAndreasNET/SDK/: Pad.cs  Ped.cs  PlayerPed.cs  Scripting.cs  (+2 more)
Debug/: GameSDK.exp  GameSDK.lib
GameSDK/: GameSDK.vcxproj  GameSDK.vcxproj.filters  main.cpp  main.h  scripting.cpp  scripting.h
Launcher/: App.xaml  App.xaml.cs  ComputerID.cs  ConfigProvider.cs  DllInjector.cs  Form1.Designer.cs  Form1.cs  Launcher.cs  Launcher.csproj  Localization.cs  MainForm.Designer.cs  MainForm.cs  MainForm.resx  MainWindow.xaml  MainWindow.xaml.cs  Program.cs  Validator.cs  app.manifest
Proxy/: Proxy.vcxproj  dllmain.cpp
Release/: GameSDK.asi  GameSDK.exp  GameSDK.lib
Server/: Connection.cs  Program.cs  RemotePlayer.cs  Server.csproj  packages.config
client/: resources.h
coop-server/: CMakeLists.txt  main.cpp  run.sh
discord_rpc/: CDiscordRPC.h
enet/: libenet_shared.dylib
moonloader/: AutoReboot.lua  CoopAndreas.cfg  CoopAndreas.lua  reload_all.lua  sagpclient.lua
project_files/: CAimSync.cpp  CChat.cpp  CChat.h  CConfigLoader.cpp  CCore.cpp  CCore.h  CCrashLog.cpp  CCrashLog.h  CCustomMenuManager.cpp  CCustomMenuManager.h  CDXFont.cpp  CDXFont.h  CDebugPedTasks.cpp  CDebugPedTasks.h  CDebugVehicleSpawner.cpp  CDebugVehicleSpawner.h  CDiscordRPC.cpp  CDiscordRPC.h  CDiscordRPCMgr.cpp  CDiscordRPCMgr.h  CDriveBy.cpp  CDriveBy.h  CEntryExitMarkerSync.cpp  CEntryExitMarkerSync.h  CHook.cpp  CHook.h  CKeySync.cpp  CKeySync.h  CLaunchManager.cpp  CLaunchManager.h  CLocalPlayer.cpp  CLocalPlayer.h  CMassPacketBuilder.h  CNetwork.cpp  CNetwork.h  CNetworkAnimQueue.cpp  CNetworkAnimQueue.h  CNetworkCheckpoint.cpp  CNetworkCheckpoint.h  CNetworkEntityBlip.cpp  (+47 more)
scm/: main.scm  script.img
server/: CControllerState.h  CMakeLists.txt  CNetwork.cpp  CNetwork.h  CNetworkEntity.cpp  CNetworkEntity.h  CNetworkEntityManager.h  CNetworkPed.h  CNetworkPedManager.h  CNetworkPlayer.h  CNetworkPlayerManager.cpp  CNetworkPlayerManager.h  CNetworkVehicle.h  CNetworkVehicleManager.h  CPackets.h  CPed.cpp  CPed.h  CPedManager.cpp  CPedManager.h  CPlayer.cpp  CPlayer.h  CPlayerManager.cpp  CPlayerManager.h  CVector.h  CVehicle.cpp  CVehicle.h  CVehicleManager.cpp  CVehicleManager.h  ConfigManager.cpp  ConfigManager.h  Driveable.h  IPacket.h  Modelable.h  PedSyncData.h  PlayerSyncData.h  README.md  VehicleDoorState.h  VehicleSyncData.h  configure.sh  eNetworkEntityType.h  (+7 more)
server/Headers/InputControllers/: CControllerState.h
server/Headers/Network/: CNetwork.h  CPacket.h  CPacketListener.h  NetworkEntityType.h
server/Headers/Ped/: CPed.h  CPedManager.h  CPedPackets.h
server/Headers/Player/: CPlayer.h  CPlayerManager.h  CPlayerPackets.h
server/Headers/Server/CLI/Commands/: CServerCommandHandler.h  ServerCommand.h  ServerCommandManager.h
server/Headers/Server/CLI/File/: CServerConfigFile.h
server/Headers/Vector/: CVector.h
server/Headers/Vehicle/: CVehicle.h  CVehiclePackets.h
server/Sources/: CServerCommandHandler.cpp  CServerConfigFile.cpp
server/Sources/Network/: CNetwork.cpp
server/Sources/Ped/: CPed.cpp  CPedManager.cpp
server/Sources/Player/: CPlayer.cpp  CPlayerManager.cpp
server/Sources/Server/CLI/Commands/: ServerCommand.cpp  ServerCommandManager.cpp
server/Sources/Vehicle/: CVehicle.cpp  CVehicleManager.cpp
server/core/: CCommandManager.h  CConfigFile.h  CControllerState.h  CNetwork.h  CPacket.h  CPacketListener.h  CPed.h  CPedManager.h  CPedPackets.h  CPlayer.h  CPlayerManager.h  CPlayerPackets.h  CServerCommandHandler.h  CServerConfigFile.h  CVector.h  CVehicle.h  CVehicleManager.h  CVehiclePackets.h  ConfigManager.h  NetworkEntityType.h  PlayerDisconnectReason.h  VehicleDoorState.h
server/core-external/: ConfigDatabase.cpp  ConfigDatabase.hpp
server/include/INIEngine-Modules/: dini.h
server/include/dini/: iem-dracoblue-implementation.h
server/include/enet/: enet.h
server/src/: CCommandManager.cpp  CConfigFile.cpp  CControllerState.h  CNetwork.cpp  CNetwork.h  CPacket.h  CPacketListener.h  CPed.cpp  CPed.h  CPedManager.cpp  CPlayer.cpp  CPlayer.h  CPlayerManager.cpp  CPlayerManager.h  CServerCommandHandler.cpp  CVehicle.cpp  CVehicleManager.cpp  CVehicleManager.h  ConfigManager.cpp  ConfigManager.h  main.cpp
server/thirdparty-libraries/: iniparser.hpp
server/thirdparty-libraries/enet/: win32.c
shared/: Packet.h  config.h  semver.h
source/: Main.cpp
(+622 files in other folders)
